--- a/深度优先搜索.md
+++ b/深度优先搜索.md
@@ -4,10 +4,10 @@
 
 <table style="text-align: center;">
 	<tr>
-		<td><img src="pic\DFS_1.1_FindingRoads.png" style="zoom: 50%" /></td> 
-		<td><img src="pic\DFS_1.2_FindRoadsProcess.png" style="zoom: 50%" /></td>
+		<td><img src=".pic\DFS_1.1_FindingRoads.png" style="zoom: 50%" /></td> 
+		<td><img src=".pic\DFS_1.2_FindRoadsProcess.png" style="zoom: 50%" /></td>
 	</tr>
-</div>
+</table>
 
 **给定一个图（左图），如何通过编程寻找从1到8的所有路径？**
 
@@ -29,15 +29,15 @@
 2. 这种策略本质上是一种枚举，但又并非是简单的枚举，而是**一种会产生多条枚举分支的枚举**（如从 1 开始，产生 2->3->…… 和 3->…… 的分支）。这样的枚举需要**循环递归**才足以应对。
 3. 行走的过程中，我们需要记录下路径上的点，而基于第2点，若使用局部变量，每次递归都会产生新的局部变量，会导致内存占用过大。因此我们可以使用**全局变量**记录所需内容。当其中一条枚举分支完成目标，我们便将其输出（或记录到其他地方），以腾出全局变量让其它枚举分支使用，这样一来，尽管所有枚举分支共用同样的全局变量，它们直接却不会互相影响。
 
-由此，我们便引出**深度优先搜索（Depth-First-Search, DFS, 深搜）**的概念：**从未被标记的节点开始，产生可能的枚举分支，并沿这样的枚举分支深入，继续产生分支，直到所有的节点都被标记或完成目标。**
+由此，我们便引出 **深度优先搜索（Depth-First-Search, DFS, 深搜）** 的概念：**从未被标记的节点开始，产生可能的枚举分支，并沿这样的枚举分支深入，继续产生分支，直到所有的节点都被标记或完成目标。**
 
 ## 深搜基本模板
 
 深搜的基本要素：**循环递归，标记，全局变量**。
 
-+ **循环递归：**以产生新的搜索分支。
-+ **标记：**避免走重复路以至于进入死循环。
-+ **全局变量：**对应场景需求，如记录深度，所走路径等。
++ **循环递归：** 以产生新的搜索分支。
++ **标记：** 避免走重复路以至于进入死循环。
++ **全局变量：** 对应场景需求，如记录深度，所走路径等。
 
 ```c++
 Dfs(V) {
@@ -67,14 +67,14 @@ int main() {
 
 ### 二、邻接表
 
-对于图的每一个节点V，可以用一个**一维数组**存放，一维数组里包含与V连通的边的信息，包括边的另一个节点，边的权值等。所有节点的一维数组就构成了**邻接表**，其遍历复杂度为 **O(n+e) **，n为节点数目，e为边数目。如下图，其邻接表可以表示为：
+对于图的每一个节点V，可以用一个**一维数组**存放，一维数组里包含与V连通的边的信息，包括边的另一个节点，边的权值等。所有节点的一维数组就构成了**邻接表**，其遍历复杂度为  **O(n+e) ** ，n为节点数目，e为边数目。如下图，其邻接表可以表示为：
 
 <table style="text-align: center;">
 	<tr>
-		<td><img src="pic\DFS_1.1_FindingRoads.png" style="zoom: 50%" /></td> 
-		<td><img src="pic\DFS_4.1_Adjacent List.png" style="zoom: 50%" /></td>
+		<td><img src=".pic\DFS_1.1_FindingRoads.png" style="zoom: 50%" /></td> 
+		<td><img src=".pic\DFS_4.1_AdjacentList.png" style="zoom: 50%" /></td>
 	</tr>
-</div>
+</table>
 
 ## 例题
 
@@ -139,9 +139,9 @@ int main() {
 对于此类会**产生多个枚举分支的枚举**，循环无法解决，需要使用**循环递归**。
 
 1. 方块需要**标记**，以避免重复枚举而陷入死循环（详见第4步）。
-2. 寻找**未标记**的方块，以这样的方块为起点启动枚举**（最外层循环条件）**。
-3. 对四个方向进行枚举：有墙则换一个方向，没墙则移动到该方向的方块上**（递归调用条件）**。
-4. 若当前方块已被标记，则终止当前搜索**（递归边界条件）**，因为**将当前方块设为A，产生对A的搜索的方块设为B，则对B的搜索正是由A产生的，不存在其它可能，换句话说，A搜索了B，B又搜索回了A**。在没有标记的情况下，这里便会陷入死循环。因此，方块的标记是确有必要的。
+2. 寻找**未标记**的方块，以这样的方块为起点启动枚举 **（最外层循环条件）** 。
+3. 对四个方向进行枚举：有墙则换一个方向，没墙则移动到该方向的方块上 **（递归调用条件）** 。
+4. 若当前方块已被标记，则终止当前搜索 **（递归边界条件）** ，因为 **将当前方块设为A，产生对A的搜索的方块设为B，则对B的搜索正是由A产生的，不存在其它可能，换句话说，A搜索了B，B又搜索回了A** 。在没有标记的情况下，这里便会陷入死循环。因此，方块的标记是确有必要的。
 5. 若当前方块未被标记，则重复第3步。
 
 这就符合了深搜的基本要素，利用深搜的思想解决问题：**以深度优先，不断递归产生新的搜索分支进行搜索**。
